--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="350dp"
+        android:src="@drawable/music_icon"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="20dp"/>
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25sp"
+        android:clickable="true"
+        />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/fabStop"
+                app:maxImageSize="50dp"
+                android:src="@drawable/ic_stop"
+                android:layout_marginStart="100dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="15dp"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/fabPlay"
+                app:maxImageSize="50dp"
+                android:src="@drawable/ic_play"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="20dp"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/fabPause"
+                app:maxImageSize="50dp"
+                android:src="@drawable/ic_pause"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="7dp"/>
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
